<resources>
    <string name="app_name">PFE</string>
    <string name="title_activity_maps">Map</string>
    <string name="more">Plus</string>
    <string name="less">Moins</string>
    <string name="hint_search">Rechercher un produit.</string>
    <string name="show">Afficher</string>
    <string name="sales_points_show_list">Points de vente</string>
    <string name="reduce">Diminuer</string>
    <string name="no">Non</string>
    <string name="retry">Réessayer</string>
    <string name="your_position">Votre position</string>
    <string name="start_point">Départ</string>
    <string name="destination_point">Arrivée</string>
    <string name="default_marker_title">Position par défaut</string>
    <string name="last_known_position">Dernière position connue</string>
    <string name="quantity">Quantité :</string>
    <string name="price">Prix :</string>
    <string name="type">Type</string>
    <string name="trade_mark">Marque</string>
    <string name="sign_up">S\'enregistrer</string>
    <string name="sign_in">Se connecter</string>
    <string name="wilaya">Wilaya</string>
    <string name="city">Ville</string>
    <string name="search_perimeter">Rayon de recherche</string>
    <string name="chose_start_point">Choisir un point de départ</string>
    <string name="chose_destination_point">Choisir une destination</string>
    <string name="nothing_match_filters">Aucun élément ne correspond aux filtres définis.</string>
    <string name="cancel">Annuler</string>
    <string name="notification_added">Notification ajoutée.</string>
    <string name="saving_informations">Informations sauvegardées.</string>
    <string name="product">Produit</string>
    <string name="sales_point">Point de vente</string>
    <string name="category">Catégorie</string>
    <string name="caracteristics">Caractéristiques</string>
    <string name="scan_barcode">Scanner le code barre</string>
    <string name="no_characteristics">Aucune caractéristique à afficher</string>

    <!-- Hints -->
    <string name="hint_mail_address">Adresse email</string>
    <string name="hint_password">Mot de passe</string>

    <!-- Dialog boxes -->
    <string name="dialog_message_activate_gps">Veuillez activer le GPS.</string>
    <string name="dialog_message_require_connexion">Cette option n\'est accessible qu\'aux utilisateurs authentifiés.</string>
    <string name="go_to_connect_dialog_option">Me connecter</string>
    <string name="dialog_title_Wilaya">Filtrer par Wilaya</string>
    <string name="dialog_title_Ville">Filtrer par Ville</string>
    <string name="dialog_title_Marque">Filtrer par Marque</string>
    <string name="dialog_title_Type">Filtrer par Type</string>
    <string name="dialog_title_Perimeter">Filtrer par Rayon de Recherche</string>
    <string name="ok_label">OK</string>
    <string name="dismiss_label">Annuler</string>
    <string name="clear_all_label">Tout Décocher</string>

    <!-- Error messages -->
    <string name="invalid_mail_address">Adresse mail invalide.</string>
    <string name="invalid_password">Mot de passe invalide, un mot de passe doit comporter
    au minimum 5 caractères, et peut contenir des chiffres (0 .. 9), des lettres (a .. Z) et des tirets - _</string>
    <string name="passwords_not_matching">Mots de passes différents, veuillez réessayer.</string>
    <string name="an_error_occured">Une erreur est survenue.</string>
    <string name="invalid_mail_password">Adresse email et/ou mot de passe invalides.</string>
    <string name="mail_address_used">L\'adresse email saisie est déjà associée à un compte.</string>
    <string name="no_corresponding_sales_point">Aucun point de vente pour le produit sélectionné.</string>
    <string name="no_internet">Aucun accès internet.</string>
    <string name="no_corresponding_product"> Aucun produit ne correspond à votre recherche.</string>
    <string name="no_marker_in_search_area">Aucun lieu n\'est présent dans le rayon de recherche.</string>
    <string name="not_available">Non disponible</string>
    <string name="empty_history">Aucun élément.</string>
    <string name="no_gps_use_last_position">GPS Désactivé, utilisation de la dernière position connue.</string>
    <string name="no_gps_default_position">GPS Désactivé, utilisation de la position par défaut.</string>
    <string name="no_product_saved">Aucun produit sauvegardé.</string>
    <string name="no_salespoint">Ce produit n\'est plus commercialisé par les points de vente sauvegardé.</string>
    <string name="no_salespoint_saved">Aucun point de vente sauvegardé pour ce produit.</string>
    <string name="no_notification_saved"> Aucune notification sauvegardée</string>

    <!-- Progress Dialog -->
    <string name="registering_informations">Enregistrement des informations ...</string>
    <string name="server_connexion">Connexion au serveur ...</string>
    <string name="checking_informations">Vérification des informations ...</string>
    <string name="retrieving_data">Récupération des données ...</string>

    <!-- Navigation Drawer -->
    <string name="home">Acceuil</string>
    <string name="favorite">Favoris</string>
    <string name="notifications">Notifications</string>
    <string name="parameters">Paramètres</string>
    <string name="about_us">A propos de nous</string>
    <string name="disconnect">Se déconnecter</string>
    <string name="connect">Se connecter</string>

    <!-- Tiles -->
    <string name="title_fragment_map">Carte</string>
    <string name="title_fragment_favorites">Favoris</string>
    <string name="title_fragment_notifications">Notifications</string>
    <string name="title_fragment_parameters">Parametres</string>
    <string name="title_fragment_search">Rechercher</string>
    <string name="title_fragment_products">Produits</string>
    <string name="title_fragment_barcode_scanner">Scanner</string>
    <string name="title_fragment_desc_product">Fiche produit</string>
    <string name="title_fragment_list_sales_point">Points de vente</string>

    <string name="clear_history"> Supprimer l\'Historique </string>
    <string name="satellite"> Satellite </string>
    <string name="standard"> Standard </string>
    <string name="map_style"> Style de la carte </string>
    <string name="turn_on_notifications"> Activer les notifications </string>
    <string name="turn_off_notifications"> Désactiver les notifications </string>
    <string name="dialog_history">Être vous sûr de vouloir supprimer l\'historique de recherche ?</string>


    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="default_notification_channel_name" translatable="true">Information</string>

    <string-array name="rayon_recherche">
        <item>10 km</item>
        <item>20 km</item>
        <item>50 km</item>
        <item>100 km</item>
    </string-array>

    <string-array name="Blida_item">
        <item>Ain romana</item>
        <item>Ben khellil</item>
        <item>Beni mered</item>
        <item>Beni tamou</item>
        <item>Blida</item>
        <item>Bouarfa</item>
        <item>Boufarik</item>
        <item>Bougara</item>
        <item>Bouinan</item>
        <item>Chebli</item>
        <item>Chiffa</item>
        <item>Chrea</item>
        <item>Djebara</item>
        <item>El Affroun</item>
        <item>Guerrouaou</item>
        <item>Hamam melouane</item>
        <item>Larabaa</item>
        <item>Meftah</item>
        <item>Mouzaia</item>
        <item>Ouled djer</item>
        <item>Ouled el alleug</item>
        <item>Ouled selama</item>
        <item>Ouled yaich</item>
        <item>Sidi moussa</item>
        <item>Souhane</item>
        <item>Soumaa</item>
    </string-array>


    <string-array name="Algiers_item">
        <item>Ouled Fayet</item>
        <item>Ain Banian</item>
        <item>Ain Naadja</item>
        <item>Ain Taya</item>
        <item>Alger Centre</item>
        <item>Bab el Oued</item>
        <item>Bab ezzouar</item>
        <item>Bab hassen</item>
        <item>Bachdjerrah</item>
        <item>Baraki</item>
        <item>Belouizdad</item>
        <item>Ben aknoun</item>
        <item>Beni messous</item>
        <item>Bir mourad rais</item>
        <item>Birkhadem</item>
        <item>Birtouta</item>
        <item>Ouled Fayet</item>
        <item>Kouba</item>
        <item>Hammamet</item>
        <item>Hydra</item>
        <item>Birkhadem</item>
    </string-array>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
