<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/position_parameter"
                android:layout_marginEnd="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Position"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <AutoCompleteTextView
                android:id="@+id/position_parameter"
                android:layout_width="302dp"
                android:layout_height="match_parent"
                android:hint="@string/default_marker_title"
                android:inputType="text"
                android:maxLines="1" />

            <ImageView
                android:id="@+id/geoloc_parameter"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/geoloc32" />
        </LinearLayout>


    </LinearLayout>
    <RadioGroup
        android:id="@+id/radio_btn_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/style_parameter"
                android:layout_marginEnd="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/map_style"
                android:textColor="@color/black"
                android:textSize="18sp" />

        </LinearLayout>


        <RadioButton
            android:id="@+id/radio_standard_map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:checked="true"
            android:text="@string/standard"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radio_satellite_map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:text="@string/satellite"
            android:textSize="16sp" />


    </RadioGroup>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/activity_vertical_margin">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/notification"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp" />

        <Switch
            android:id="@+id/switch_notification"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:checked="true"
            android:text="@string/turn_off_notifications"
            android:textColor="@color/black"
            android:textSize="18sp" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/activity_vertical_margin">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/history_parameter"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"  />

        <TextView
            android:id="@+id/history_parameter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clear_history"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

    </LinearLayout>




</LinearLayout>
