<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <FrameLayout android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
            <android.support.design.widget.FloatingActionButton
                android:id="@+id/geolocalisation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="50dp"
                app:backgroundTint="@color/colorPrimary"
                android:scaleType="center"
               android:src="@drawable/geoloc48"/>


    </FrameLayout>

    <LinearLayout
        android:id="@+id/map_views_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <FrameLayout
                android:id="@+id/map_frame_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </FrameLayout>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="horizontal"
                >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    >
                    <Button
                        android:id="@+id/btn_Wilaya"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:text="@string/wilaya"
                        android:background="@drawable/button"
                        android:textAllCaps="false"
                        android:textColor="#616161"
                        android:textSize="12sp"
                        android:visibility="gone"
                        />

                    <Button
                        android:id="@+id/btn_Ville"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:text="@string/city"
                        android:background="@drawable/button"
                        android:textAllCaps="false"
                        android:visibility="gone"
                        android:textColor="#616161"
                        android:textSize="12sp"
                        />

                    <Button
                        android:id="@+id/btn_Rayon_Recherche"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:padding="4dp"
                        android:text="@string/search_perimeter"
                        android:background="@drawable/button"
                        android:textColor="#616161"
                        android:textSize="12sp"
                        android:textAllCaps="false"
                        android:visibility="gone"
                        />
                </LinearLayout>
            </HorizontalScrollView>

            <ListView
                android:id="@+id/list_view_salespoint_product"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone"
                android:layout_marginBottom="48dp"
                />

            <Button
                android:id="@+id/show_list_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:textColor="#616161"
                android:text="@string/sales_points_show_list"
                android:background="#bbdefb"
                android:textAllCaps="false"
                android:visibility="gone"
                />

        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>